--- a/css/styles.css
+++ b/css/styles.css
@@ -1243,7 +1243,7 @@ h6,
 .h6 {
 	font-family           : var(--font-2);
 	font-weight           : 400;
-	color                 : var(--color-text-dark);
+	color                 : #ea8f10bf;
 	font-variant-ligatures: common-ligatures;
 	text-rendering        : optimizeLegibility;
 }
