--- a/css/styles.css
+++ b/css/styles.css
@@ -100,22 +100,22 @@
  * ## colors
  * ------------------------------------------------------------------- */
 :root {
-  /* color-1(#EA9010)
-   * color-2(#343D35)
-   * color-3(#FEF5E4)
+  /* color-1(#d56b83)
+   * color-2(#649778)
+   * color-3(#558c9b)
    */
-	--color-1: hsla(35, 87%, 49%, 1);
-	--color-2: hsla(127, 8%, 22%, 1);
-	--color-3: hsla(39, 93%, 95%, 1);
+	--color-1: #d56b83;
+	--color-2: #649778;
+	--color-3: #558c9b;
 
   /* theme color variations
    */
-	--color-1-lightest             : hsla(35, 87%, 96%, 1);
-	--color-1-lighter              : hsla(35, 87%, 69%, 1);
-	--color-1-light                : hsla(35, 87%, 59%, 1);
-	--color-1-dark                 : hsla(35, 87%, 39%, 1);
-	--color-1-darker               : hsla(35, 87%, 29%, 1);
-	--color-1-darkest              : hsla(35, 87%, 10%, 1);
+	--color-1-lightest             : #f0cbd4;
+	--color-1-lighter              : #d89ca9;
+	--color-1-light                : #d56b83;
+	--color-1-dark                 : #e86f80;
+	--color-1-darker               : #d15b6d;
+	--color-1-darkest              : #bf3c57;
 
 	--color-2-lightest             : hsla(127, 8%, 55%, 1);
 	--color-2-lighter              : hsla(127, 8%, 42%, 1);
