--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@
    * color-3(#558c9b)
    */
 	--color-1: #d56b83;
-	--color-2: #558c9b;
+	--color-2: #93d2d5;
 	--color-3: #649778;
 
   /* theme color variations
